--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <html lang="pt-br">
 
     <head>
-        <title>BATATA.LIVE</title>
+        <title>PROEN.LIVE</title>
         <link rel="stylesheet" href="style.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,7 +11,7 @@
 
     <body>
 
-        <header>BATATA.LIVE</header>
+        <header>PROEN.LIVE</header>
 
 
 
@@ -61,15 +61,6 @@
     </body>
 
     </html>
-
-
-
-
-
-
-
-
-
 
 
 </DOCTYPE>
